添加NVIDIA NIM备用模型支持
主要改进：
1. 添加NVIDIA API配置：
   - 在.env中添加NVIDIA_API_KEY和NVIDIA_BASE_URL
   - 使用deepseek-ai/deepseek-v3.2作为备用模型

2. processor.py改进：
   - 添加NVIDIA备用模型调用方法
   - 当GLM模型全部失败时自动切换到NVIDIA模型
   - 完善降级日志记录

3. writer.py改进：
   - 添加NVIDIA备用模型调用方法
   - 当GLM模型全部失败时自动切换到NVIDIA模型
   - 完善降级日志记录

4. 模型调用顺序：
   - 主模型：GLM-5
   - GLM降级模型：GLM-4.7
   - NVIDIA备用模型：deepseek-ai/deepseek-v3.2

测试结果：
- GLM模型因余额不足失败
- 系统自动降级到NVIDIA模型
- 成功生成播客讲稿和音频文件

--- a/.env
+++ b/.env
@@ -7,9 +7,15 @@
 DEBUG=True
 
 # ============================================
-# 智谱 AI (GLM-4) 配置
+# 智谱 AI (GLM) 配置
 # ============================================
 ZHIPUAI_API_KEY=941f76fbbc564f759f0d775112b77baa.T2bjfpU0E9fhnDxJ
+
+# ============================================
+# NVIDIA NIM API 配置 (备用模型)
+# ============================================
+NVIDIA_API_KEY=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
+NVIDIA_BASE_URL=https://integrate.api.nvidia.com/v1
 
 # ============================================
 # 可选: 代理配置 (如需翻墙访问某些数据源)
