更新GitHub Actions工作流：添加NVIDIA API配置
主要改进：
- 添加NVIDIA_API_KEY环境变量
- 添加NVIDIA_BASE_URL配置
- 添加NVIDIA_PRIMARY_MODEL配置

注意：需要在GitHub仓库的Secrets中添加NVIDIA_API_KEY

--- a/.github/workflows/daily-brief.yml
+++ b/.github/workflows/daily-brief.yml
@@ -35,6 +35,9 @@ jobs:
         run: |
           echo "DEBUG=True" > .env
           echo "ZHIPUAI_API_KEY=${{ secrets.ZHIPUAI_API_KEY }}" >> .env
+          echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" >> .env
+          echo "NVIDIA_BASE_URL=https://integrate.api.nvidia.com/v1" >> .env
+          echo "NVIDIA_PRIMARY_MODEL=moonshotai/kimi-k2.5" >> .env
 
       - name: Run daily brief bot
         run: python main.py
